--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASiNet.Data.Serialize\ASiNet.Data.csproj" />
+    <ProjectReference Include="..\ASiNet.Data.Serialize\ASiNet.Data.Serialization.csproj" />
   </ItemGroup>
 
 </Project>
