--- a/Test2/Test2.csproj
+++ b/Test2/Test2.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASiNet.Data.Serialize\ASiNet.Data.csproj" />
+    <ProjectReference Include="..\ASiNet.Data.Serialize\ASiNet.Data.Serialization.csproj" />
   </ItemGroup>
 
 </Project>
