--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.11" />
+    <PackageReference Include="MemoryPack" Version="1.10.0" />
   </ItemGroup>
 
   <ItemGroup>
