refactoring & add settings

--- a/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
+++ b/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
@@ -11,14 +11,14 @@
     <Authors>ASiDev,Difoldery</Authors>
     <Copyright>MIT</Copyright>
     <Description>Binary Seializer</Description>
-    <PackageIcon>12.png</PackageIcon>
+    <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/ASiNet-ASiDev/ASiNet.Data.Serialization</RepositoryUrl>
     <PackageTags>Serialization;Serialize,Binary</PackageTags>
     <Company>DiSi</Company>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\Downloads\12.png">
+    <None Include="..\..\..\..\Downloads\icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
