--- a/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
+++ b/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
@@ -7,7 +7,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>$(AssemblyName)</Title>
-    <Version>0.3.2</Version>
+    <Version>0.3.3</Version>
     <Authors>ASiDev,Difoldery</Authors>
     <Copyright>MIT</Copyright>
     <Description>Binary Seializer</Description>
@@ -16,6 +16,7 @@
     <PackageTags>Serialization;Serialize,Binary</PackageTags>
     <Company>DiSi</Company>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageProjectUrl>https://t.me/DotNetCodeExamples/3</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
