--- a/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
+++ b/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
@@ -7,10 +7,10 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>$(AssemblyName)</Title>
-    <Version>0.3.6</Version>
+    <Version>0.3.7</Version>
     <Authors>ASiDev,Difoldery</Authors>
     <Copyright>MIT</Copyright>
-    <Description>Binary Seializer</Description>
+    <Description>Fast serialization of almost any objects into bytes</Description>
     <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/ASiNet-ASiDev/ASiNet.Data.Serialization</RepositoryUrl>
     <PackageTags>Serialization;Serialize,Binary</PackageTags>
