source generators & global refactoring

--- a/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
+++ b/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
@@ -7,7 +7,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>$(AssemblyName)</Title>
-    <Version>0.4.1</Version>
+    <Version>0.4.2</Version>
     <Authors>ASiDev,Difoldery</Authors>
     <Copyright>MIT</Copyright>
     <Description>Fast serialization of almost any objects into bytes</Description>
@@ -32,6 +32,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ASiNet.Data.Serialization.Core\ASiNet.Data.Serialization.Core.csproj" />
   </ItemGroup>
 
 </Project>
