--- a/ASiNet.Data.Serialization.Analyzers/ASiNet.Data.Serialization.Analyzers.csproj
+++ b/ASiNet.Data.Serialization.Analyzers/ASiNet.Data.Serialization.Analyzers.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASiNet.Data.Serialization.Core\ASiNet.Data.Serialization.Core.csproj" />
+    <ProjectReference Include="..\ASiNet.Data.Serialization.Core\ASiNet.Data.Serialization.Common.csproj" />
   </ItemGroup>
 
 </Project>
