--- a/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
+++ b/ASiNet.Data.Serialize/ASiNet.Data.Serialization.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASiNet.Data.Serialization.Core\ASiNet.Data.Serialization.Core.csproj" />
+    <ProjectReference Include="..\ASiNet.Data.Serialization.Core\ASiNet.Data.Serialization.Common.csproj" />
   </ItemGroup>
 
 </Project>
