--- a/ASiNet.Data.Serialization.Core/ASiNet.Data.Serialization.Common.csproj
+++ b/ASiNet.Data.Serialization.Core/ASiNet.Data.Serialization.Common.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ASiNet.Data.Serialization</RootNamespace>
+	  <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,6 +16,10 @@
 
   <ItemGroup>
     <PackageReference Include="System.Memory" Version="4.5.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PreGeneration\" />
   </ItemGroup>
 
 </Project>
